--- a/android-reference-app/app/build.gradle
+++ b/android-reference-app/app/build.gradle
@@ -34,13 +34,10 @@ android {
 
 dependencies {
     implementation "io.agora.rtc:full-sdk:${project.agoraSDKVersion}"
-    implementation project(':agora-manager')
-    implementation project(':authentication-workflow')
-    implementation project(':ensure-channel-quality')
-    implementation project(':play-media')
-    implementation project(':product-workflow')
+    // implementation project(':agora-manager')
+    // implementation project(':authentication-workflow')
 
-    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
+    // implementation 'com.squareup.okhttp3:okhttp:4.9.3'
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
