--- a/android-reference-app/app/src/main/AndroidManifest.xml
+++ b/android-reference-app/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
-            android:label="Android reference app"
+            android:label="Signaling reference app"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -35,32 +35,11 @@
             android:label="Secure authentication with tokens">
         </activity>
 
-        <activity android:name=".CallQualityActivity"
-            android:label="Call quality best practice">
-        </activity>
-
-        <activity android:name=".PlayMediaActivity"
-            android:label="Stream media to a channel">
-        </activity>
-
-        <activity android:name=".ProductWorkflowActivity"
-            android:label="Screen share, volume control and mute">
-        </activity>
-
     </application>
 
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
-
-    <!-- The Agora SDK requires Bluetooth permissions in case users are using Bluetooth devices. -->
-    <uses-permission android:name="android.permission.BLUETOOTH" />
-    <!-- For Android 12 and above devices, the following permission is also required. -->
-    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
 
 </manifest>
