--- a/signaling-reference-app/settings.gradle
+++ b/signaling-reference-app/settings.gradle
@@ -15,6 +15,6 @@ dependencyResolutionManagement {
 rootProject.name = "android-reference-app"
 
 include ':app'
-// include ':agora-manager'
-// project(':agora-manager').projectDir = new File(rootProject.projectDir, '../agora-manager')
+include ':signaling-manager'
+project(':signaling-manager').projectDir = new File(rootProject.projectDir, '../signaling-manager')
 // project(':authentication-workflow').projectDir = new File(rootProject.projectDir, '../authentication-workflow')
