--- a/signaling-reference-app/settings.gradle
+++ b/signaling-reference-app/settings.gradle
@@ -12,7 +12,7 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "android-reference-app"
+rootProject.name = "signaling-reference-app"
 
 include ':app'
 include ':signaling-manager'
