--- a/signaling-manager/build.gradle
+++ b/signaling-manager/build.gradle
@@ -28,7 +28,8 @@ android {
 }
 
 dependencies {
-    implementation files('../signaling-reference-app/app/libs/agora-rtm-sdk.jar')
+    //implementation files('../signaling-reference-app/app/libs/agora-rtm-sdk.jar')
+    implementation 'io.agora:agora-rtm:2.1.6'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     testImplementation 'junit:junit:4.13.2'
