--- a/signaling-reference-app/app/build.gradle
+++ b/signaling-reference-app/app/build.gradle
@@ -33,7 +33,8 @@ android {
 }
 
 dependencies {
-    implementation files('libs/agora-rtm-sdk.jar')
+    //implementation files('libs/agora-rtm-sdk.jar')
+    implementation 'io.agora:agora-rtm:2.1.6'
     implementation project(':signaling-manager')
     // implementation project(':authentication-workflow')
 
