--- a/authentication-workflow/build.gradle
+++ b/authentication-workflow/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 android {
-    namespace 'io.agora.signaling_manager'
+    namespace 'io.agora.authentication_manager'
     compileSdk 33
 
     defaultConfig {
@@ -29,6 +29,8 @@ android {
 
 dependencies {
     implementation "io.agora:agora-rtm:${project.signalingSDKVersion}"
+    implementation project(':signaling-manager')
+    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     testImplementation 'junit:junit:4.13.2'
