--- a/signaling-reference-app/app/build.gradle
+++ b/signaling-reference-app/app/build.gradle
@@ -33,10 +33,9 @@ android {
 }
 
 dependencies {
-    //implementation files('libs/agora-rtm-sdk.jar')
-    implementation 'io.agora:agora-rtm:${project.signalingSDKVersion}'
+    implementation "io.agora:agora-rtm:${project.signalingSDKVersion}"
     implementation project(':signaling-manager')
-    // implementation project(':authentication-workflow')
+    implementation project(':authentication-workflow')
 
     // implementation 'com.squareup.okhttp3:okhttp:4.9.3'
     implementation 'androidx.core:core-ktx:1.10.1'
