--- a/signaling-reference-app/app/src/main/AndroidManifest.xml
+++ b/signaling-reference-app/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,9 +18,16 @@
         android:theme="@style/Theme.Androidreferenceapp"
         tools:targetApi="31">
         <activity
+            android:name=".StreamChannelActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".MainActivity"
-            android:label="Signaling reference app"
-            android:exported="true">
+            android:exported="true"
+            android:label="Signaling reference app">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,20 +38,12 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
-        <activity android:name=".BasicImplementationActivity"
-            android:label="SDK Quickstart">
-        </activity>
-
-        <activity android:name=".AuthenticationActivity"
-            android:label="Secure authentication with tokens">
-        </activity>
-
+        <activity
+            android:name=".BasicImplementationActivity"
+            android:label="SDK Quickstart"></activity>
+        <activity
+            android:name=".AuthenticationActivity"
+            android:label="Secure authentication with tokens"></activity>
     </application>
-
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
 </manifest>
