--- a/signaling-reference-app/settings.gradle
+++ b/signaling-reference-app/settings.gradle
@@ -15,6 +15,7 @@ dependencyResolutionManagement {
 rootProject.name = "signaling-reference-app"
 
 include ':app'
-include ':signaling-manager', ':authentication-workflow'
+include ':signaling-manager', ':authentication-workflow', ':stream-channel'
 project(':signaling-manager').projectDir = new File(rootProject.projectDir, '../signaling-manager')
 project(':authentication-workflow').projectDir = new File(rootProject.projectDir, '../authentication-workflow')
+project(':stream-channel').projectDir = new File(rootProject.projectDir, '../stream-channel')
