--- a/signaling-reference-app/app/src/main/AndroidManifest.xml
+++ b/signaling-reference-app/app/src/main/AndroidManifest.xml
@@ -18,6 +18,13 @@
         android:theme="@style/Theme.Androidreferenceapp"
         tools:targetApi="31">
         <activity
+            android:name=".CloudProxyActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".StreamChannelActivity"
             android:exported="false">
             <meta-data
@@ -40,10 +47,10 @@
         </activity>
         <activity
             android:name=".BasicImplementationActivity"
-            android:label="SDK Quickstart"></activity>
+            android:label="SDK Quickstart" />
         <activity
             android:name=".AuthenticationActivity"
-            android:label="Secure authentication with tokens"></activity>
+            android:label="Secure authentication with tokens" />
     </application>
 
 </manifest>
