--- a/signaling-reference-app/app/src/main/AndroidManifest.xml
+++ b/signaling-reference-app/app/src/main/AndroidManifest.xml
@@ -18,6 +18,13 @@
         android:theme="@style/Theme.Androidreferenceapp"
         tools:targetApi="31">
         <activity
+            android:name=".DataEncryptionActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".CloudProxyActivity"
             android:exported="false">
             <meta-data
