--- a/signaling-reference-app/gradle.properties
+++ b/signaling-reference-app/gradle.properties
@@ -1,5 +1,5 @@
 # Project-wide Gradle settings.
-# Agora Video SDK version
+# Agora RTM SDK version
 signalingSDKVersion=2.1.7
 # IDE (e.g. Android Studio) users:
 # Gradle settings configured through the IDE *will override*
