--- a/data-encryption/build.gradle
+++ b/data-encryption/build.gradle
@@ -28,7 +28,7 @@ android {
 }
 
 dependencies {
-    implementation "io.agora:agora-rtm:${project.signalingSDKVersion}"
+    implementation "io.agora.rtm:rtm-sdk:${project.signalingSDKVersion}"
     implementation project(':signaling-manager')
     implementation project(':authentication-workflow')
     implementation 'com.squareup.okhttp3:okhttp:4.9.3'
