--- a/signaling-manager/build.gradle
+++ b/signaling-manager/build.gradle
@@ -28,7 +28,7 @@ android {
 }
 
 dependencies {
-    implementation "io.agora:agora-rtm:${project.signalingSDKVersion}"
+    implementation "io.agora.rtm:rtm-sdk:${project.signalingSDKVersion}"
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     testImplementation 'junit:junit:4.13.2'
